modificado classe de section do rei leão

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <section class="wrapper">
+        <section class="wrapper-1">
                 <div class="hero-content">
                     <img class="logo" src="img/logo.svg" alt="">
                     <h1>
@@ -38,7 +38,7 @@
                         </div>
                         <div class="plano-2">
                             <h3>
-                                De R$ 334 por R$<br> 279,90<span>/ano*</span>
+                                De R$ 334 por R$ 279,90<span>/ano*</span>
                             </h3>
                             <p class="p-plano-2">
                                 Inclui teste grátis de 7 dias.
@@ -111,20 +111,18 @@
             </div>
             
         </section>
-        <section class="wrapper">
-            <div class="foreground-image">
-                <picture>
-                    <img class="img-rei-leao" src="img/o-rei-leao.png" alt="">
-                </picture>  
+        <section class="wrapper-leao">
+            <div class="foreground-leao-image">
+                <img class="img-reileao" src="img/o-rei-leao.png" alt="">
             </div>
-            <div class="meta">
+            <div class="meta-leao">
                 <h2>
                     Baixe filmes e séries
                 </h2>
                 <p>
                     Baixe e assista quando e onde quiser. Assim, seus favoritos estão 
                     sempre com você, até mesmo sem internet.
-                </p>
+                </p> 
             </div>  
         </section>
         <section class="wrapper">
@@ -200,13 +198,52 @@
                 <img src="img/device-group-game-consoles.png" alt="">
                 <h3>Videogames</h3>
                 <p>PS4</p>
+                <p>PS5</p>
                 <p>Xbox One</p>
+                <p>Xbox Series X</p>
+                <p>Xbox Series S</p>
             </div>
         </section>
 
     </main>
     <footer>
-
+        <img class="logo-footer" src="img/logo.svg" alt="">
+        <nav class="footer" >
+            <ul>
+                <li>
+                    <select name="idioma">
+                        <option value="pt">Português</option>
+                        <option value="en">English</option>
+                    </select>
+                </li>
+                <li>
+                    <a href="">Contrato de Assinatura</a>
+                </li>
+                <li>
+                    <a href="">Política de privacidade</a>
+                </li>
+                <li>
+                    <a href="">Proteção de Dados do Brasil</a>
+                </li>
+                <li>
+                    <a href="">Anúncios personalizados</a>
+                </li>
+                <li>
+                    <a href="">Dispositivos compatíveis</a>
+                </li>
+                <li>
+                    <a href="">Ajuda</a>
+                </li>
+                <li>
+                    <a href="">Sobre o Disney+</a>
+                </li>
+            </ul>
+        </nav>
+        <p>© 2020 Disney e seu grupo de empresas afiliadas. Todos os direitos reservados.</p>
+        <p>Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. 
+            O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda., 
+            World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, 
+            São Paulo/SP – CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20</p>
     </footer>
 
 </body>
